--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@ body {
     height: 600px;
     margin: 0px auto;
 }
-.image-section-content{
+
+.image-section-content {
     max-width: 700px;
     padding: 120px;
 }
@@ -130,3 +131,54 @@ body {
 /* image section ends */
 
 /* schedule section styles */
+.schedule-section {
+    width: 1340px;
+    height: 482px;
+    background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    margin: 0px auto;
+    margin-top: 120px;
+}
+
+.schedule-location {
+    padding: 100px 386px;
+    text-align: center;
+}
+
+.text-style {
+    color: #F00;
+    text-align: center;
+    font-family: Inter;
+    font-size: 32px;
+    font-weight: 600;
+    text-transform: capitalize;
+}
+
+.text-style-info {
+    color: #070211;
+    text-align: center;
+    font-family: Inter;
+    font-size: 32px;
+    font-weight: 600;
+    text-transform: capitalize;
+}
+
+.schedule-button {
+    border: none;
+    border-radius: 8px;
+    background: #F00;
+    padding: 16px 32px;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.schedule-section-button {
+    margin: 0px 577px;
+}
+
+/* schedule section ends */
+
+/* bonus section styles */
