--- a/style.css
+++ b/style.css
@@ -235,6 +235,7 @@ body {
     height: 370px;
     padding: 35px;
 }
+
 .bonus-content-right {
     max-width: 276px;
 }
@@ -261,3 +262,49 @@ body {
     height: 140px;
     margin-top: 0px;
 }
+
+/* bonus section ends */
+
+/* holiday sale styles */
+
+.holiday-sale {
+    width: 1068px;
+    text-align: center;
+    margin: 0px auto;
+    margin-top: 100px;
+}
+
+.holiday-sale-text {
+    color: #070211;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.holidays-title {
+    color: #F00;
+    font-family: Merriweather;
+    font-size: 72px;
+    font-weight: 900;
+    margin-bottom: 10px;
+}
+
+.holiday-sale-title {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 72px;
+    font-weight: 900;
+    margin: 0;
+}
+
+.holiday-sale-description {
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+/* Holiday sale ends */
+
+/*Discount styles*/
