--- a/style.css
+++ b/style.css
@@ -316,15 +316,83 @@ body {
     background-image: url('images/Rectangle 2.png'), url('images/Rectangle 1.png');
     background-repeat: no-repeat;
     background-position: bottom, top right;
+    margin-bottom: 20px;
 }
+
 /* discount starts*/
 .discount-left {
     position: absolute;
     left: 10px;
 }
+
 .discount-right {
     position: absolute;
     top: 80px;
     right: 290px;
 }
+
 /* discount ends */
+
+/* Portfolio section styles */
+.portfolio-section {
+    width: 1320px;
+    margin: 100px auto;
+}
+
+.portfolio-text-content {
+    max-width: 896px;
+}
+
+.portfolio-text {
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 0px;
+}
+
+.portfolio-title {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: capitalize;
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+
+.portfolio-description {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+
+.first-row {
+    margin-top: 50px;
+    margin-bottom: 0px;
+    display: flex;
+    gap: 20px;
+}
+
+.first-row img:hover {
+    border: 2px solid green;
+}
+
+.second-row {
+    margin-top: 20px;
+    margin-bottom: 0px;
+    display: flex;
+    gap: 20px;
+}
+
+.second-row img:hover {
+    border: 2px solid green;
+}
+/* Portfolio section ends */
+
+/* Newsletter section styles*/
+
+/* Newsletter section ends */
