--- a/style.css
+++ b/style.css
@@ -4,6 +4,19 @@ body {
     font-family: 'Merriweather', serif;
 }
 
+.footer-text {
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+hr {
+    width: 1320px;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.15);
+}
+
 /*banner styles*/
 .banner {
     background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('images/Banner Image.png');
@@ -449,6 +462,7 @@ input {
     font-size: 18px;
     font-weight: 400;
 }
+
 label {
     position: relative;
 }
@@ -471,8 +485,61 @@ label {
     right: 0;
     bottom: 0;
 }
+
 /* Newsletter section ends */
 
 /* Footer starts here */
+.footer-container {
+    width: 100%;
+    height: 609px;
+    background: #070211;
+    margin-top: 100px;
+}
 
+.footer-top {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-top-left {
+    max-width: 375px;
+    margin: 100px 120px 30px 140px;
+}
+
+.footer-top-right {
+    margin: 100px 275px 30px 120px;
+}
+
+.footer-top-right img {
+    float: left;
+    margin-right: 15px;
+    
+}
+
+.footer-middle {
+    width: 400px;
+    text-align: center;
+    margin: 50px auto;
+}
+
+.footer-middle img{
+    margin-right: 20px;
+}
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+}
+.footer-bottom-left {
+    width: 300px;
+    padding: 15px 90px ;
+}
+
+.footer-bottom-right {
+    width: 150px;
+    padding: 40px 90px ;
+}
+
+.footer-bottom-right a {
+    text-decoration: none ;
+}
 /* THE END! */
