--- a/style.css
+++ b/style.css
@@ -391,7 +391,9 @@ hr {
 }
 
 .first-row img:hover {
-    border: 2px solid green;
+    border: 5px solid #F00;
+    border-radius: 5%;
+    box-shadow: 10px 10px 5px #888888;
 }
 
 .second-row {
@@ -402,7 +404,9 @@ hr {
 }
 
 .second-row img:hover {
-    border: 2px solid green;
+    border: 5px solid #F00;
+    border-radius: 5%;
+    box-shadow: 10px 10px 5px #888888;
 }
 
 /* Portfolio section ends */
